Removendo página de portifólio para futuras fixes

--- a/curriculo.html
+++ b/curriculo.html
@@ -15,13 +15,12 @@
 		<div class="navigation">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="curriculo.html">Currículo</a></li>
 				<li><a href="contato.html">Contato</a></li>
 			</ul>
 		</div>
 
-			<div class="main">		
+			<div class="main">
 				<ul class="path">
 					<li>Home</li>
 					<li>></li>
@@ -34,30 +33,27 @@
 							<h2>Dados Pessoais</h2>
 							<hr>
 							<img class="curriculum-pic" src="img/breno-profile.jpg" alt="Foto de Breno Gabriel">
-		
 							<h3>Nome:</h3>
-	
 								<p>Breno Gabriel Rodrigues da Silva</p>
-	
 							<h3>Data de Nascimento:</h3>
-	
 								<p>19/05/1999</p>
-	
 							<h3>Residência:</h3>
-	
 								<p>Mogi das Cruzes - SP, Brasil</p>
-	
 							<h3 style="clear: left;">Idiomas:</h3>
-	
 								<p>Português (Nativo)</p>
 								<p>Inglês (Fluente)</p>
-								<p>Espanhol(Básico)</p>		
+								<p>Espanhol(Básico)</p>
+
+							<h3>GitHub</h3>
+								<p><a href="https://github.com/BrenoXDMoon" target="_blank" rel="noopener noreferrer">https://github.com/BrenoXDMoon</a></p>
 						</div>
 						<div class="sobre-mim">
 							<h2>Sobre Mim</h2>
 							<hr>
 							<p>
-								Estudante de Análise e Desenvolvimento de Sistemas na Fatec Mogi das Cruzes. Interessado em Tecnologia e Natureza. Apoio o desenvolvimento sustentável.
+								Estudante de Análise e Desenvolvimento de Sistemas na Fatec Mogi das Cruzes. 
+								Interessado em Tecnologias de DevOps, tais como Docker e Kubernetes. 
+								Buscando oportunidade de emprego utilizando linguagem de programação Java e tecnologias de DevOps, utilizando Metodologias Ágeis.
 							</p>
 						</div>
 
@@ -65,7 +61,7 @@
 							<h2>Educação</h2>
 							<hr>
 							<h3>Fevereiro/2017 - Em andamento</h3>
-							<p>Análise e Desenvolvimento de Sistemas/Fatec Mogi das Cruzes</p>				
+							<p>Análise e Desenvolvimento de Sistemas/Fatec Mogi das Cruzes</p>
 						</div>
 
 						<div class="habilidades">
@@ -73,23 +69,35 @@
 							<hr>
 							<h3>Front-end</h3>
 							<p>
-								HTML / CSS / Javascript / JSP / Thymeleaf
+								HTML / CSS / Typescript
 							</p>
 	
 							<h3>Back-end</h3>
 	
 							<p>
-								Python / Java / C# / C / C++
+								Python / Java (EJB, JPA, Spring MVC) / .Net
 							</p>
 
 							<h3>Banco de Dados</h3>
 
-							<p>PostgreSQL / MySQL / Oracle 11g XE</p>
-	
-							<h3>I.A.</h3>
-	
+							<p>MySQL </p>
+
+							<h3>Business Intelligence</h3>
+
 							<p>
-								Python
+								Power Bi
+							</p>
+
+							<h3>DevOps</h3>
+
+							<p>
+								Docker / Kubernetes / Jenkins / Terraform
+							</p>
+
+							<h3>Cloud</h3>
+
+							<p>
+								AWS
 							</p>
 						</div>
 	
@@ -98,15 +106,15 @@
 							<hr>
 							<h3>Fevereiro/2019-Maio/2019</h3>
 	
-							<p>Estagiário Fullstack - Prefeitura Municipal de Mogi das Cruzes - Ginásio Municipal Hugo Ramos</p>
+							<p>Estagiário Fullstack - Prefeitura Municipal de Mogi das Cruzes</p>
 	
 							<h3>Agosto/2019-Novembro/2019</h3>
 	
-							<p>Estagiário Front-end - Evolutap - Avenida Braz de Pina, nº529</p>
+							<p>Estagiário Front-end - Evolutap</p>
 	
 							<h3>Atual</h3>
 	
-							<p>Estagiário Inteligência Artificial - VIVO - Avenida Engenheiro Luiz Carlos Berrini</p>
+							<p>Estagiário de Virtualização - VIVO</p>
 						</div>
 				</div>
 
