--- a/contato.html
+++ b/contato.html
@@ -16,15 +16,12 @@
 		<div class="navigation">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="curriculo.html">Currículo</a></li>
 				<li><a href="contato.html">Contato</a></li>
 			</ul>
 		</div>
 
 			<div class="main">
-				
-				
 				<ul class="path">
 					<li>Home</li>
 					<li>></li>
@@ -32,25 +29,19 @@
 				</ul>
 
 				<h1>Contato</h1>
-			
 
 				<h3>E-mail:</h3>
-				<p>brenogabriel19@gmail.com</p>
+				<p>breno.silva4@fatec.sp.gov.br</p>
 
 				<h3>Telefone:</h3>
-				<p>+55 (11) 97585-2226</p>
+				<p>+55 (11) 97293-2035</p>
 
 				<h3>Redes Sociais:</h3>
-				<a href="https://www.facebook.com/brenoxdmoon" target="_blank"><img class="social-img" src="img/facebook.png"></a>
 				<a href="https://www.linkedin.com/in/breno-gabriel-rodrigues-silva-2820b6161/"><img class="social-img" src="img/linkedin.png" target="_blank"></a>
-
 				<br>
 				<a href="index.html">Voltar ao início<a>
 
-			</div>	
-
-			
-
+			</div>
 	</body>
 
 </html>
