--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					
+					<li><a href="portfolio.html">Portfolio</a></li>
 					<li><a href="curriculo.html">Currículo</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
