Cor no link do GitHub

--- a/curriculo.html
+++ b/curriculo.html
@@ -45,7 +45,7 @@
 								<p>Espanhol(Básico)</p>
 
 							<h3>GitHub</h3>
-								<p><a href="https://github.com/BrenoXDMoon" target="_blank" rel="noopener noreferrer">https://github.com/BrenoXDMoon</a></p>
+								<p><a href="https://github.com/BrenoXDMoon" class="botao" target="_blank" rel="noopener noreferrer">https://github.com/BrenoXDMoon</a></p>
 						</div>
 						<div class="sobre-mim">
 							<h2>Sobre Mim</h2>
