--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,7 @@
 				<h1>Contato</h1>
 
 				<h3>E-mail:</h3>
-				<p>breno.silva4@fatec.sp.gov.br</p>
+				<p>brenogabriel19@gmail.com</p>
 
 				<h3>Telefone:</h3>
 				<p>+55 (11) 97293-2035</p>
