--- a/curriculo.html
+++ b/curriculo.html
@@ -52,7 +52,7 @@
 							<hr>
 							<p>
 								Estudante de Análise e Desenvolvimento de Sistemas na Fatec Mogi das Cruzes. 
-								Interessado em Tecnologias de DevOps, tais como Docker e Kubernetes. 
+								Interessado em Tecnologias de DevOps, tais como Docker e Kubernetes, e também em Spring Framework.
 								Buscando oportunidade de emprego utilizando linguagem de programação Java e tecnologias de DevOps, utilizando Metodologias Ágeis.
 							</p>
 						</div>
@@ -75,7 +75,7 @@
 							<h3>Back-end</h3>
 	
 							<p>
-								Python / Java (EJB, JPA, Spring MVC) / .Net
+								Python (Django, NumPy) / Java (EJB, JPA, Spring Framework) / .Net
 							</p>
 
 							<h3>Banco de Dados</h3>
@@ -112,9 +112,13 @@
 	
 							<p>Estagiário Front-end - Evolutap</p>
 	
+							<h3>Fevereiro/2020 - Julho/2021</h3>
+	
+							<p>Estagiário de Virtualização - Telefonica Brasil(Vivo)</p>
+
 							<h3>Atual</h3>
 	
-							<p>Estagiário de Virtualização - VIVO</p>
+							<p>Analista de Telecom Jr - Telefonica Brasil (Vivo)</p>
 						</div>
 				</div>
 
