--- a/curriculo.html
+++ b/curriculo.html
@@ -61,7 +61,7 @@
 							<h2>Educação</h2>
 							<hr>
 							<h3>Fevereiro/2017 - Em andamento</h3>
-							<p>Análise e Desenvolvimento de Sistemas/Fatec Mogi das Cruzes</p>
+							<p>Fatec Mogi das Cruzes: Análise e Desenvolvimento de Sistemas</p>
 						</div>
 
 						<div class="habilidades">
@@ -75,7 +75,7 @@
 							<h3>Back-end</h3>
 	
 							<p>
-								Python (Django, NumPy) / Java (EJB, JPA, Spring Framework) / .Net
+								Python (Django, NumPy) / Java (EJB, JPA, Spring Framework)
 							</p>
 
 							<h3>Banco de Dados</h3>
