--- a/curriculo.html
+++ b/curriculo.html
@@ -116,9 +116,13 @@
 	
 							<p>Estagiário de Virtualização - Telefonica Brasil(Vivo)</p>
 
-							<h3>Atual</h3>
+							<h3>Julho/2021 - Dezembro/2021</h3>
 	
 							<p>Analista de Telecom Jr - Telefonica Brasil (Vivo)</p>
+
+							<h3>Atual</h3>
+
+							<p>Desenvolvedor Back-end (Java/Spring) - Muralis Tecnologia</p>
 						</div>
 				</div>
 
