--- a/curriculo.html
+++ b/curriculo.html
@@ -42,7 +42,8 @@
 							<h3 style="clear: left;">Idiomas:</h3>
 								<p>Português (Nativo)</p>
 								<p>Inglês (Fluente)</p>
-								<p>Espanhol(Básico)</p>
+								<p>Espanhol(Intermediário)</p>
+								<p>Francês(Básico)</p>
 
 							<h3>GitHub</h3>
 								<p><a href="https://github.com/BrenoXDMoon" class="botao" target="_blank" rel="noopener noreferrer">https://github.com/BrenoXDMoon</a></p>
@@ -75,12 +76,12 @@
 							<h3>Back-end</h3>
 	
 							<p>
-								Python (Django, NumPy) / Java (EJB, JPA, Spring Framework)
+								Python (Django, NumPy) / Java (EJB, JPA, Spring Framework) / Node.js
 							</p>
 
 							<h3>Banco de Dados</h3>
 
-							<p>MySQL </p>
+							<p>MySQL / DynamoDB / PostgreSQL</p>
 
 							<h3>Business Intelligence</h3>
 
@@ -91,7 +92,7 @@
 							<h3>DevOps</h3>
 
 							<p>
-								Docker / Kubernetes / Jenkins / Terraform
+								Docker / Kubernetes / Jenkins
 							</p>
 
 							<h3>Cloud</h3>
@@ -120,9 +121,9 @@
 	
 							<p>Analista de Telecom Jr - Telefonica Brasil (Vivo)</p>
 
-							<h3>Atual</h3>
+							<h3>Janeiro/2022 - Outubro/2023</h3>
 
-							<p>Desenvolvedor Back-end (Java/Spring) - Muralis Tecnologia</p>
+							<p>Analista em Desenvolvimento de Software - Muralis Tecnologia</p>
 						</div>
 				</div>
 
