--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<div class="profile-title">
 					<h1>Breno Gabriel <span>Rodrigues da Silva</span></h1>
-					<h2>Estudante de ADS - Estagiário - Programador Júnior</h2>
+					<h2>Formado em ADS - Desenvolvedor Backend | Java | Spring Framework | Python | Node.js</h2>
 				</div>
 
 			</div>
