--- a/curriculo.html
+++ b/curriculo.html
@@ -113,15 +113,11 @@
 	
 							<p>Estagiário Front-end - Evolutap</p>
 	
-							<h3>Fevereiro/2020 - Julho/2021</h3>
-	
-							<p>Estagiário de Virtualização - Telefonica Brasil(Vivo)</p>
-
-							<h3>Julho/2021 - Dezembro/2021</h3>
+							<h3>Fevereiro/2020 - Dezembro/2021</h3>
 	
 							<p>Analista de Telecom Jr - Telefonica Brasil (Vivo)</p>
 
-							<h3>Janeiro/2022 - Outubro/2023</h3>
+							<h3>Julho/2021 - Outubro/2023</h3>
 
 							<p>Analista em Desenvolvimento de Software - Muralis Tecnologia</p>
 						</div>
