--- a/curriculo.html
+++ b/curriculo.html
@@ -61,7 +61,7 @@
 						<div class="educacao">
 							<h2>Educação</h2>
 							<hr>
-							<h3>Fevereiro/2017 - Em andamento</h3>
+							<h3>Fevereiro/2017 - Dezembro/2021</h3>
 							<p>Fatec Mogi das Cruzes: Análise e Desenvolvimento de Sistemas</p>
 						</div>
 
