--- a/curriculo.html
+++ b/curriculo.html
@@ -120,6 +120,10 @@
 							<h3>Julho/2021 - Outubro/2023</h3>
 
 							<p>Analista em Desenvolvimento de Software - Muralis Tecnologia</p>
+
+							<h3>Janeiro/2024 - Atual</h3>
+
+							<p>Desenvolvedor de Sistemas - Wintaylor Workforce Optimization</p>
 						</div>
 				</div>
 
